--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "typescript": "^5.0.0"
   },
   "dependencies": {
+    "@clack/prompts": "^0.11.0",
     "citty": "^0.1.6",
     "smol-toml": "^1.3.0",
     "tar": "^7.5.3"
