--- a/package.json
+++ b/package.json
@@ -18,7 +18,10 @@
   "dependencies": {
     "@clack/prompts": "^0.11.0",
     "citty": "^0.1.6",
+    "gray-matter": "^4.0.3",
+    "simple-git": "^3.30.0",
     "smol-toml": "^1.3.0",
-    "tar": "^7.5.3"
+    "tar": "^7.5.3",
+    "terminal-kit": "^3.1.2"
   }
 }
