feat: add update, uninstall, list commands and skill diff comparison
- Add update cmd to check remote repos for skill changes
- Add uninstall cmd to remove skills from store and agents
- Add testable listSkills function for list command
- Track installSource (repo, protocol, skillPath) for updates
- Add shortName field to Agent type for matrix display
- Show diff during adopt conflicts and install updates
- Support marketplace.json discovery and git submodules
- Local installs create symlinks instead of copies

--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
   },
   "dependencies": {
     "@clack/prompts": "^0.11.0",
+    "@pierre/diffs": "^1.0.6",
     "citty": "^0.1.6",
     "gray-matter": "^4.0.3",
     "simple-git": "^3.30.0",
