--- a/package.json
+++ b/package.json
@@ -1,10 +1,33 @@
 {
-  "name": "simba",
+  "name": "@ethancord/simba",
   "version": "0.1.0",
+  "description": "AI skills manager - central store with symlink-based distribution across 14+ coding agents",
   "type": "module",
+  "license": "MIT",
+  "author": "Ethan Fann",
+  "repository": {
+    "type": "git",
+    "url": "https://github.com/ethanfann/simba"
+  },
+  "keywords": [
+    "ai",
+    "skills",
+    "claude",
+    "cursor",
+    "copilot",
+    "codex",
+    "amp",
+    "gemini",
+    "windsurf",
+    "agent",
+    "cli"
+  ],
   "bin": {
     "simba": "./src/index.ts"
   },
+  "files": [
+    "src"
+  ],
   "scripts": {
     "dev": "bun run src/index.ts",
     "test": "bun test",
@@ -25,5 +48,8 @@
     "smol-toml": "^1.3.0",
     "tar": "^7.5.3",
     "terminal-kit": "^3.1.2"
+  },
+  "engines": {
+    "bun": ">=1.0.0"
   }
 }
