--- a/package.json
+++ b/package.json
@@ -1,9 +1,10 @@
 {
   "name": "simba-skills",
-  "version": "0.1.4",
+  "version": "0.1.6",
   "description": "AI skills manager - central store with symlink-based distribution across 14+ coding agents",
   "publishConfig": {
-    "access": "public"
+    "access": "public",
+    "provenance": true
   },
   "type": "module",
   "license": "MIT",
